[gd_scene load_steps=8 format=2]

[ext_resource path="res://items/wheel.png" type="Texture" id=1]
[ext_resource path="res://left_side/Chest.gd" type="Script" id=2]
[ext_resource path="res://left_side/chest.png" type="Texture" id=3]
[ext_resource path="res://items/magnet.png" type="Texture" id=4]
[ext_resource path="res://items/bag.png" type="Texture" id=5]
[ext_resource path="res://items/key.png" type="Texture" id=6]
[ext_resource path="res://items/backpack.png" type="Texture" id=7]

[node name="Chest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chest" type="Sprite" parent="."]
position = Vector2( 513.398, 300.033 )
rotation = -1.5708
scale = Vector2( 0.345881, 0.459026 )
texture = ExtResource( 3 )

[node name="Wheel" type="Sprite" parent="Chest"]
position = Vector2( 143.585, 402.176 )
rotation = 0.103831
scale = Vector2( 0.236521, 0.183147 )
texture = ExtResource( 1 )

[node name="wheel" type="Button" parent="Chest/Wheel"]
margin_left = -1159.0
margin_top = -1078.0
margin_right = 965.0
margin_bottom = 1239.0
rect_rotation = -5.9
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="Button" parent="Chest"]
margin_left = -871.0
margin_top = -1115.0
margin_right = -443.0
margin_bottom = 1121.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="Control" parent="."]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryBG" type="ColorRect" parent="Inventory"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 225.0
margin_top = 10.0
margin_right = 815.0
margin_bottom = 100.0
color = Color( 0.552941, 0.552941, 0.552941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bag" type="Sprite" parent="Inventory"]
visible = false
position = Vector2( 755.456, 45.5813 )
scale = Vector2( 0.05, 0.04 )
texture = ExtResource( 5 )

[node name="Wheel" type="Sprite" parent="Inventory"]
visible = false
position = Vector2( 599.716, 57.2354 )
scale = Vector2( 0.0472156, 0.0400875 )
texture = ExtResource( 1 )

[node name="Magnet" type="Sprite" parent="Inventory"]
visible = false
position = Vector2( 422.785, 49.8192 )
scale = Vector2( 0.05, 0.0422667 )
texture = ExtResource( 4 )

[node name="Key" type="Sprite" parent="Inventory"]
visible = false
position = Vector2( 271.282, 55.1165 )
scale = Vector2( 0.05, 0.0422667 )
texture = ExtResource( 6 )

[node name="ToggleInventory" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -94.9999
margin_top = 86.0
margin_right = 941.0
margin_bottom = 999.0
rect_rotation = -90.0
rect_scale = Vector2( 0.07, 0.082 )
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Chest/Wheel/wheel" to="." method="_on_wheel_pressed"]
[connection signal="pressed" from="Chest/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="ToggleInventory" to="." method="_on_ToggleInventory_pressed"]
